dev: fix footer copyright padding on mobile

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -52,9 +52,6 @@
   .footer__roses {
     transform: translateY(0%);
   }
-    .footer__copyright {
-    padding-top: 20px;
-  }
 }
 
 @media (max-width: 480px) {
@@ -64,5 +61,9 @@
 
   .footer__roses {
     transform: translateY(40%);
+  }
+
+  .footer__copyright {
+    padding-top: 40px;
   }
 }
